| Bug #30780 | GCP_COMMIT does not wait for transactions taken-over during node failure | ||
|---|---|---|---|
| Submitted: | 4 Sep 2007 9:56 | Modified: | 5 Oct 2008 18:37 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[4 Sep 2007 9:56]
Jonas Oreland
[4 Jul 2008 9:37]
Jonas Oreland
work in progress patch-series
Attachment: wip.tgz (application/x-compressed-tar, text), 10.38 KiB.
[4 Jul 2008 10:51]
Jonas Oreland
updated version
Attachment: wip.tgz (application/x-compressed-tar, text), 10.57 KiB.
[11 Aug 2008 12:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51269 2643 jonas@mysql.com 2008-08-11 ndb - bug#30780 DIH: Add rerunning of GCP_NOMORETRANSREQ (if needed) TC: Add handling of various new cases wrt GCP and node failure Add LQHTRANSREQ transactions to GCP-list
[11 Aug 2008 13:22]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51281 2659 jonas@mysql.com 2008-08-11 [merge] ndb - merge bug#30780 to 6.3
[11 Aug 2008 13:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51284 2659 jonas@mysql.com 2008-08-11 [merge] ndb - merge bug#30780 to 6.3
[11 Aug 2008 13:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/51285 2643 jonas@mysql.com 2008-08-11 ndb - bug#30780 DIH: Add rerunning of GCP_NOMORETRANSREQ (if needed) TC: Add handling of various new cases wrt GCP and node failure Add LQHTRANSREQ transactions to GCP-list
[11 Aug 2008 13:46]
Jonas Oreland
pushed to 62, 63, 64
[11 Sep 2008 18:27]
Jon Stephens
Documented in the NDB 6.2.16 and 6.3.17 changelogs. Left status unchanged.
[5 Oct 2008 18:37]
Jon Stephens
Already documented for NDB 6.2/6.3; closed.
[13 Dec 2008 0:28]
Bugs System
Pushed into 6.0.6-alpha (revid:jonas@mysql.com-20080811104111-guuevivoquhvx2u6) (version source revid:jonas@mysql.com-20080813092004-7zlf6eu87i4ziwm2) (pib:5)
